load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "org_kubeflow_pipelines_components_v1alpha1_proto",
    srcs = ["components.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:struct_proto"],
)

go_proto_library(
    name = "org_kubeflow_pipelines_components_v1alpha1_go_proto",
    importpath = "github.com/kubeflow/pipelines/sdk/python/kfp/components/structures",
    proto = ":org_kubeflow_pipelines_components_v1alpha1_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":org_kubeflow_pipelines_components_v1alpha1_go_proto"],
    importpath = "github.com/kubeflow/pipelines/sdk/python/kfp/components/structures",
    visibility = ["//visibility:public"],
)
